update logic and styles for tooltip and accordion

--- a/app/styles/components/shared/c-content-accordion.scss
+++ b/app/styles/components/shared/c-content-accordion.scss
@@ -9,7 +9,7 @@
   > .accordion-item {
     border-bottom: 2px solid $color-10;
     padding: 25px 0 30px;
-    position: relative;
+    // position: relative;
 
     &:first-child {
       padding-top: 5px;
