fix bugs and add comments

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -41,7 +41,7 @@ body {
 
 :global .section-page {
   padding: 55px 0 65px;
-  position: relative;
+  // position: relative;
 
   &::after {
     background-color: $color-10;
