--- a/app/styles/components/c-other-section.scss
+++ b/app/styles/components/c-other-section.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
 
-    @media #{$mq-mobile-large} {
+    @media screen and (min-width: 600px) {
       align-items: center;
       flex-direction: row;
       padding-left: 90px;
@@ -41,7 +41,7 @@
         margin-bottom: 0;
       }
 
-      @media screen and (min-width: 460px) {
+      @media screen and (min-width: 600px) {
         margin: 0;
         margin-right: 20px;
       }
@@ -51,7 +51,11 @@
       }
 
       &:last-of-type {
-        margin-bottom: 0;
+        margin: 20px auto 0;
+
+        @media screen and (min-width: 600px) {
+          margin: 0;
+        }
       }
     }
   }
