--- a/app/styles/components/c-publication-article.scss
+++ b/app/styles/components/c-publication-article.scss
@@ -34,6 +34,14 @@
     line-height: 1.4;
   }
 
+  >.image {
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 170px;
+    margin-bottom: 15px;
+    width: 100%;
+  }
+
   > .description p {
     font-family: $font-family-2;
     font-size: $font-size-small;
