fix color in contact page text

--- a/app/styles/components/c-contact.scss
+++ b/app/styles/components/c-contact.scss
@@ -9,6 +9,7 @@
   .intro-contact {
     a {
       border-bottom: 1px solid $color-6;
+      color: $color-4;
     }
   }
 
@@ -70,7 +71,6 @@
     ul {
       li {
         font-size: $font-size-small;
-
       }
     }
 
