--- a/app/styles/components/c-partner-section.scss
+++ b/app/styles/components/c-partner-section.scss
@@ -104,16 +104,16 @@
       @media #{$mq-tablet} {
         display: inline-block;
         margin-bottom: 0;
-        padding-right: 22px;
+        padding: 0 20px;
         width: calc(100% / 3);
-
-        &:last-child {
-          padding-right: 0;
-        }
       }
 
       p {
         font-size: $font-size-small;
+      }
+
+      li {
+        padding: 0;
       }
     }
   }
