--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -50,7 +50,7 @@
   position: relative;
 
   @media screen and (min-width: 900px) {
-    height: calc(100% - 38px);
+    height: calc(100% - 38px); // footer mini height
   }
 }
 
@@ -59,7 +59,7 @@
   width: 100%;
 
   @media screen and (min-width: 900px) {
-    height: calc(100% - 38px);
+    height: calc(100% - 38px); // footer mini height
   }
 
   &.-placeholder {
