--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -37,7 +37,7 @@
       background-color: $color-2;
       border: 1px solid rgba($color-3, .3);
       color: $color-4;
-      max-height: 420px;
+      max-height: calc(100vh - 20px);
       overflow-x: hidden;
       overflow-y: auto;
       width: calc(100% - 10px);
