implemented map filters/controls

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -21,15 +21,18 @@ $duration-picker-height: 24px;
 
 // Font sizes
 $font-size-tiny: 10px;
-$font-size-x-small: 12px;
+$font-size-xxs-small: 12px;
 $font-size-xs-small: 13px;
 $font-size-small: 14px; // UI kit
+$font-size-x-small: 15px; // UI kit
 $font-size-normal: 16px;
 $font-size-x-normal: 18px;
 $font-size-medium: 20px;
+$font-size-s-medium: 22px;
 $font-size-x-medium: 25px; // UI kit
 $font-size-big: 30px;
 $font-size-x-big: 34px;
+$font-size-xs-big: 35px;
 $font-size-xx-big: 40px; // UI kit
 $font-size-xxx-big: 70px; // UI kit
 $font-size-huge: 100px;
@@ -60,6 +63,9 @@ $color-22: rgba(7, 51, 56, .3); // UI kit map
 $color-23: #032044; // used for gradient at homepage
 $color-24: rgba(3, 32, 68, 0); // used for gradient at homepage
 $color-25: rgba(255, 255, 255, .7); // image attribution
+$color-26: #eee;
+$color-27: #c7c7c7;
+
 
 // Colors to review
 $color-14: #2d3a57;
@@ -80,3 +86,7 @@ $mq-mobile-small: 'screen and (min-width: #{$breakpoint-mobile-small})';
 $mq-mobile-large: 'screen and (min-width: #{$breakpoint-mobile-large})';
 $mq-tablet: 'screen and (min-width: #{$breakpoint-tablet})';
 $mq-laptop: 'screen and (min-width: #{$breakpoint-laptop})';
+
+// miscellaneous
+$hsla-begin: hsla(0, 0%, 0%, .1);
+$hsla-end: hsla(0, 0%, 100%, .1);
