--- a/app/styles/components/c-filters-panel.scss
+++ b/app/styles/components/c-filters-panel.scss
@@ -1,19 +1,21 @@
 @import '../settings';
 
-.settingsPanel {
+.filters-panel {
+
   input {
     display: block;
   }
+
   select {
-    width: 260px;
-    height: 40px;
     background-color: $color-15;
     border: solid 1px $color-14;
+    border-radius:   0;
     color: $color-4;
-    font-weight: $font-weight-normal;
-    font-size: $font-size-x-normal;
-    outline: 0;
     display: block;
-    border-radius: 0;
+    font-size: $font-size-x-normal;
+    font-weight: $font-weight-normal;
+    height: 40px;
+    outline: 0;
+    width: 260px;
   }
 }
