smaller map viewport
this will improve performance by reducing the map area to only its
visible part (previously timeline was covering it, now it’s below)

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -12,6 +12,7 @@ $wrap-mobile: 25px;
 // what size should have wraps in tablet.
 $wrap-tablet: 55px;
 $wrap-desktop: 115px;
+$footer-mini-height: 38px;
 
 // Map
 $timebar-height: 70px;
