--- a/app/styles/components/c-map.scss
+++ b/app/styles/components/c-map.scss
@@ -37,10 +37,9 @@
 }
 
 .timebar-container {
-  bottom: 0;
+  bottom: $footer-mini-height;
   height: $timebar-height;
   left: 0;
-  position: absolute;
   width: 100%;
   z-index: 6;
 }
@@ -50,7 +49,7 @@
   position: relative;
 
   @media screen and (min-width: 900px) {
-    height: calc(100% - 38px); // footer mini height
+    height: calc(100% - #{$footer-mini-height + $timebar-height}); // footer mini height
   }
 }
 
