--- a/app/styles/components/shared/c-footer-mini.scss
+++ b/app/styles/components/shared/c-footer-mini.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: $color-1;
   display: flex;
-  height: 38px;
+  height: $footer-mini-height;
   justify-content: space-between;
   padding: 0 20px;
 
