--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700');
+
 @import 'settings';
 
 * {
