--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -62,9 +62,12 @@ $color-24: rgba(3, 32, 68, 0); // used for gradient at homepage
 $color-25: rgba(255, 255, 255, .7); // image attribution
 $color-26: #eee;
 $color-27: #c7c7c7;
+
+$color-28: #39579b;
+$color-29: #da4735;
+$color-30: #55acee;
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
-
 
 // Colors to review
 $color-14: #2d3a57;
