--- a/app/styles/components/map/c-share.scss
+++ b/app/styles/components/map/c-share.scss
@@ -5,12 +5,17 @@
 
   > .title {
     font-size: $font-size-medium;
-    font-weight: $font-weight-normal;
+    font-weight: $font-weight-bold;
     margin-bottom: 10px;
   }
 
   > .intro {
+    color: $color-4;
+    font-family: $font-family-1;
+    font-size: $font-size-small;
+    font-weight: $font-weight-bold;
     margin: 0;
+    text-transform: uppercase;
   }
 
   > form {
@@ -34,6 +39,7 @@
     border: 0;
     color: $color-4;
     cursor: pointer;
+    font-size: $font-size-small;
     font-weight: $font-weight-bold;
     height: 40px;
     position: absolute;
