Fixes issues with the search feature
* Improves the resilience of the results by only showing the results of the last search (i.e. last request)
* Improves the UI by making a difference between a search with no results and a search not yet started
* Removes deduplication of state in the SearchPanel component
* Removes direct (forbidden) mutations to SeachPanel's state
* Reduces the frequency of request: waits for the user to stop typing to make one
* Adds a "No result" message
* Adds a padding to the search field

--- a/app/styles/components/map/c-search-panel.scss
+++ b/app/styles/components/map/c-search-panel.scss
@@ -15,6 +15,7 @@
     line-height: 1.8;
 
     outline: 0;
+    padding-right: 30px;
     width: 100%;
   }
 
@@ -40,11 +41,10 @@
     }
 
     > .result {
+      color: rgba($color-4, .7);
       cursor: pointer;
-
       font-size: $font-size-small;
       line-height: 1.3;
-
       position: relative;
 
       .highlight {
@@ -54,11 +54,6 @@
 
       &:not(:first-child) {
         margin: 15px 0 0;
-      }
-
-      > .vessel-name,
-      > .mmsi {
-        color: rgba($color-4, .7);
       }
     }
   }
