--- a/app/styles/components/shared/c-modal.scss
+++ b/app/styles/components/shared/c-modal.scss
@@ -77,6 +77,7 @@
       height: 16px;
       left: 50%;
       position: absolute;
+      stroke: $color-7;
       top: 50%;
       transform: translate(-50%, -50%);
       width: 16px;
