--- a/app/styles/components/map/c-layer-panel.scss
+++ b/app/styles/components/map/c-layer-panel.scss
@@ -66,6 +66,7 @@
       }
 
       > .opacity-menu {
+        cursor: default;
         display: flex;
         flex-basis: 100%;
         max-height: 0;
@@ -73,8 +74,8 @@
         transition: max-height .25s ease;
 
         &.-is-visible {
-          max-height: 40px;
           margin: 10px 0 5px;
+          max-height: 40px;
           overflow: visible;
         }
 
@@ -87,14 +88,29 @@
           width: 100%;
 
           :global .track-container {
-            background-color: $color-14;
-            height: 3px;
-            margin: 10px 0 0;
+            background-color: transparent;
+            cursor: pointer;
+            height: 15px;
             position: relative;
 
             .track-active {
               background-color: $color-4;
               height: 3px;
+              position: absolute;
+              top: 50%;
+              transform: translate(0, -50%);
+            }
+
+            &::before {
+              background: $color-13;
+              content: '';
+              display: inline-block;
+              height: 3px;
+              left: 0;
+              position: absolute;
+              top: 50%;
+              transform: translate(0, -50%);
+              width: 100%;
             }
           }
 
@@ -120,11 +136,12 @@
 
             &.-min,
             &.-max {
-              bottom: 0;
+              bottom: 10px;
             }
 
             &.-current {
               top: -25px;
+              transform: translate(calc(-50% + 3px), 0);
             }
 
             &.-min {
