--- a/app/styles/components/c-vessel-info-panel.scss
+++ b/app/styles/components/c-vessel-info-panel.scss
@@ -35,7 +35,7 @@
     justify-content: space-between;
     padding: 20px 20px 15px;
 
-    > .row-info {
+    .row-info {
       display: flex;
       flex-basis: calc(50% - 10px);
       flex-direction: column;
@@ -61,7 +61,7 @@
       }
     }
 
-    > .external-link {
+    .external-link {
       color: $color-3;
       display: inline-block;
       font-family: $font-family-1;
